Project

General

Profile

Actions

Bug #52705

closed

pg scrub stat mismatch with special objects that have hash 'ffffffff'

Added by huang jun over 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
nautilus, octopus, pacific
Regression:
No
Severity:
1 - critical
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Here is the steps to reproduce the pg inconsistents:
1. build a cluster with vstart
MON=1 OSD=3 MDS=0 MGR=1 ../src/vstart.sh -X -n
2. create a pool with only 1 pg
./bin/ceph osd pool create rbd 1
3. put an object with special name, which will let the object hash as 'ffffffff'
./bin/rados -p rbd put 59431f0f-60c1-49be-ab18-9bfbee59869c.1019453.1_obj0344489466 /etc/passwd --debug_objecter=20 --debug_ms=5
4. trigger the pg scrub
./bin/ceph pg scrub 1.0
5. the expect output of 'ceph -s' will include 'active+clean+inconsistent'

6. the problem maybe the objectstore::get_coll_range interface which will not include the object with hash 'ffffffff'


Related issues 4 (0 open4 closed)

Has duplicate bluestore - Bug #54226: bluestore crash and not repairable scrub errorsDuplicate

Actions
Copied to RADOS - Backport #52769: octopus: pg scrub stat mismatch with special objects that have hash 'ffffffff'ResolvedActions
Copied to RADOS - Backport #52770: pacific: pg scrub stat mismatch with special objects that have hash 'ffffffff'ResolvedNeha OjhaActions
Copied to RADOS - Backport #52771: nautilus: pg scrub stat mismatch with special objects that have hash 'ffffffff'RejectedActions
Actions #1

Updated by Kefu Chai over 2 years ago

reproduced on master (254bf8e883d73dc83cda6ac28689f4a64a60f670)

Actions #2

Updated by Kefu Chai over 2 years ago

  • Status changed from New to In Progress
  • Assignee set to Kefu Chai
Actions #3

Updated by Kefu Chai over 2 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 43289
Actions #4

Updated by Neha Ojha over 2 years ago

  • Project changed from Ceph to RADOS
  • Category deleted (OSD)
Actions #5

Updated by Kefu Chai over 2 years ago

  • Backport set to octopus, pacific
Actions #6

Updated by Kefu Chai over 2 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from octopus, pacific to nautilus, octopus, pacific
Actions #7

Updated by Backport Bot over 2 years ago

  • Copied to Backport #52769: octopus: pg scrub stat mismatch with special objects that have hash 'ffffffff' added
Actions #8

Updated by Backport Bot over 2 years ago

  • Copied to Backport #52770: pacific: pg scrub stat mismatch with special objects that have hash 'ffffffff' added
Actions #9

Updated by Backport Bot over 2 years ago

  • Copied to Backport #52771: nautilus: pg scrub stat mismatch with special objects that have hash 'ffffffff' added
Actions #10

Updated by Igor Fedotov about 2 years ago

  • Has duplicate Bug #54226: bluestore crash and not repairable scrub errors added
Actions #11

Updated by Igor Fedotov about 2 years ago

  • Project changed from RADOS to bluestore
Actions #12

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #13

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF